--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,49 +6,20 @@ body {
   background-color: $background;
 }
 
-.wrapper {
-  width: calc(100vw - 100px);
-  height: 100%;
-  background-color: #fff;
-  margin: 50px auto;
-  border-radius: 10px;
-  max-width: 1400px;
-}
-
 .content {
-  padding: 40px 0;
+  background-color: #fff;
 
   &__title {
-    margin: 35px 0;
+    padding: 35px 0;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  &__top {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    row-gap: 16px;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: min(3vw, 30px);
   }
 }
 
-.container {
-  width: $container-width;
-  margin: 0 auto;
-
-  &--cart {
-    max-width: 820px;
-    margin: 90px auto;
-    .content__title {
-      margin: 0;
-    }
-  }
-}
 
 .cart {
   &__top {
