--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,13 +2,15 @@
 
 
 .header {
-  border-bottom: 1px solid $gray-line;
-  padding: 40px 0;
+  margin-top: 32px;
+  background: #fff;
+  border-radius: 10px 10px 0 0;
 
-  .container {
+  &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 40px 0 40px;
   }
 
   &__logo {
