--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,12 +1,16 @@
 @import '../variables';
 
 .pizza-block {
-  width: 280px;
+  grid-column: 4 span;
   text-align: center;
   margin-bottom: 65px;
+  
+  @media (max-width: 1024px) {
+    grid-column: 6 span;
+  }
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
+  @media (max-width: 767px) {
+    grid-column: 12 span;
   }
 
   &__image {
@@ -16,7 +20,6 @@
   &__title {
     font-size: 20px;
     font-weight: 900;
-    letter-spacing: 1%;
     margin-bottom: 20px;
   }
 
