--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -1,9 +1,10 @@
 @import '../variables';
 
 .categories {
-  ul {
+
     display: flex;
     gap: 8px;
+    overflow: scroll;
 
     li {
       background-color: #f9f9f9;
@@ -28,5 +29,5 @@
         color: #fff;
       }
     }
-  }
+
 }
