--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,11 +5,15 @@
   margin-top: 32px;
   background: #fff;
   border-radius: 10px 10px 0 0;
+  border-bottom: 1px solid #e4e4e4;
+
 
   &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 16px;
     padding: 40px 0 40px;
   }
 
