--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,13 +1,12 @@
 .navigation {
-
   background-color: #fff;
 
   &__wrapper {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     row-gap: 16px;
     justify-content: space-between;
-    padding-bottom: 40px;
+    padding: 40px 0;
   }
 }
