--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    row-gap: 16px;
+    gap: 16px;
     padding: 40px 0 40px;
   }
 
