--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -6,18 +6,18 @@
   &__label {
     display: flex;
     align-items: center;
+    gap: 8px;
 
-    svg {
-      margin-right: 8px;
-    }
-
-    b {
-      margin-right: 8px;
+    button {
+      border: none;
+      background: none;
+      cursor: pointer;
     }
 
     span {
       color: $orange;
       border-bottom: 1px dashed $orange;
+      font-weight: bold;
       cursor: pointer;
     }
   }
@@ -31,7 +31,7 @@
     border-radius: 10px;
     overflow: hidden;
     padding: 10px 0;
-    width: 160px;
+    width: 300px;
 
     ul {
       overflow: hidden;
